WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141543
[iOS] Refine GC behavior in response to process suspension and memory pressure.
https://bugs.webkit.org/show_bug.cgi?id=141543
Summary
[iOS] Refine GC behavior in response to process suspension and memory pressure.
Andreas Kling
Reported
2015-02-12 16:41:45 PST
We should employ slightly different GC strategies when responding to memory pressure vs when trying to minimize web process footprint before being suspended.
Attachments
Patch
(2.07 KB, patch)
2015-02-12 16:46 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-02-12 16:46:49 PST
Created
attachment 246488
[details]
Patch
Geoffrey Garen
Comment 2
2015-02-12 16:47:26 PST
Comment on
attachment 246488
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2015-02-12 16:48:53 PST
Attachment 246488
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/cocoa/MemoryPressureHandlerCocoa.mm:66: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2015-02-13 09:38:57 PST
Comment on
attachment 246488
[details]
Patch Clearing flags on attachment: 246488 Committed
r180053
: <
http://trac.webkit.org/changeset/180053
>
WebKit Commit Bot
Comment 5
2015-02-13 09:39:01 PST
All reviewed patches have been landed. Closing bug.
Otto Duncan
Comment 6
2025-01-19 18:23:58 PST
I am taking a look in the bug. The exploratory patch is not working because when updateAnimations is called, sometimes it calls
http://trac.webkit.org/changeset/180053
https://chillguy-clicker.io
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug