[iOS] Refine GC behavior in response to process suspension and memory pressure. <https://webkit.org/b/141543> <rdar://problem/19738024>

Reviewed by Geoffrey Garen.

Do an immediate full garbage collection when the web process is about to
be suspended (when another tab is moving to the foreground on iOS.)
This ensures that we make a best effort to reduce the process footprint
before we lose the ability to execute code.

When receiving a memory pressure warning, tell the garbage collector to
accelerate its next collection (by calling garbageCollectSoon().)
This gives us some confidence that a collection will happen within a
reasonable timeframe, but doesn't risk dooming us to a loop of endless
garbage collections.

* platform/cocoa/MemoryPressureHandlerCocoa.mm:
(WebCore::MemoryPressureHandler::platformReleaseMemory):


Canonical link: https://commits.webkit.org/159588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180053 268f45cc-cd09-0410-ab3c-d52691b4dbfc